fixed rendering / layout bugs

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -136,6 +136,11 @@
   }
 
   .inner-container {
+	position: absolute;
+	top: 20px;
+	left: 20px;
+	bottom: 30px;
+	right: 20px;
 	display: -webkit-box;
 	display: flex;
 	min-height: 775px;
@@ -276,4 +281,10 @@ div.tab.active-page {
 	position: absolute;
 	right: 20px;
 	bottom: 10px;
+}
+
+main#journal-main {
+	width: 100%;
+	padding-top: 66%;
+	position: relative;
 }
